--- a/_includes/citations.html
+++ b/_includes/citations.html
@@ -1,4 +1,5 @@
-<ul>
+<h5 class="section-title">Citations Overview</h5>
+<ul class="my_list">
   {% for pub in site.data.citations.publications %}
     <li>
       {{ pub.title }} — Citations: {{ pub.citation_count }}
